--- a/Assignment_1_Code/createPage.css
+++ b/Assignment_1_Code/createPage.css
@@ -1,23 +1,29 @@
+
 #information_container{
-    width: 70%;
+    width: 75%;
     margin: auto;
-    padding: 70px 0;
+    padding: 2% 0;
 }
 
 .element_container{
-    width: 100%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    width: 80%;
+    display: flex;
+    flex-wrap: nowrap;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 20%;
 }
 
 .element_container label{
     display: inline-block;
-    width: 120px;
+    width: 10%;
+    padding-right: 5%; 
+    padding-top: 1%;
     text-align: left;
 }
 
-.element_container input, #search_box_container input{
-    width: 500px;
+.element_container input, #place_type{
+    width: 50%;
     height: 30px;
     background-color: #e6e6e6;
     border-radius: 10px;
@@ -29,36 +35,49 @@
     height: 40px;
 }
 
+#rating_range{
+    color: red;
+    font-size: 15px;
+    padding-left: 0.2%;
+    padding-top: 0.8%;
+}
+
 #submit{
     width: 100px;
-    height: 45px;
+    height: 40px;
     border-radius: 8px;
-    margin-right: 10px;
+    margin-top: 2%;
+    margin-left: 15%;
+    margin-right: 4%;
     background-color: #00cc44;
     color: white;
-    font-size: 20px;
+    font-weight: bold;
     outline: none; 
 }
 #reset{
     width: 100px;
-    height: 45px;
+    height: 40px;
     border-radius: 8px;
-    margin-left: 10px;
+    margin-top: 2%;
     background-color: #ffbb00;
     color: white;
-    font-size: 20px;
+    font-weight: bold;
     outline: none; 
 }
 
 
 #button_container{
-    margin-top: 30px;
-    margin-left: 385px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 5%;
+    margin-left: 45%;
 }
 
 #list_link_container{
-    margin-top: 30px;
-    margin-left: 480px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 2%;
+    margin-left: 61%;
     font-size: 12px;
     font-weight: bold;
 }
